--- a/internship.html
+++ b/internship.html
@@ -53,12 +53,12 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burson-cohn-and-wolfe-apac.workable.com/j/D7A65FEA49'>BCW APAC - Jobs: Public Relations Intern - Apply online</a></h5> 
+<h5><a href='https://burson-cohn-and-wolfe-apac.workable.com/j/D7A65FEA49'>BCW APAC - Jobs: Public Relations Intern - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://rubensteintech.applytojob.com/apply/85jDr7K5qi/Web-Software-Engineering-Intern-Fall-2019'>Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/samsungssi/job/ooEEafwA'>Samsung Semiconductor, Inc. Careers - Computer Vision/Deep Learning Software Engineer Intern</a></h5> 
@@ -89,11 +89,11 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/consensys/jobs/1796281'>Job Application for Business Development Intern at Consensys</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1796281'>Job Application for Business Development Intern at Consensys</a></h5> 
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://swapfiets.recruitee.com/l/fr/o/graphic-design-internship'>
+<h5><a href='https://swapfiets.recruitee.com/l/fr/o/graphic-design-internship'>
       Graphic Design Internship - Swapfiets
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
@@ -202,7 +202,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gpc/job/oy4Eafwa'>Genuine Parts Company Careers - Digital Intern, Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gpc/job/oy4Eafwa'>Genuine Parts Company Careers - Digital Intern, Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -238,7 +238,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Boston Boston</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://padf.applicantstack.com/x/detail/a21hsk8nwbtz'>Communications Intern ? STEM Education - Pan American ...</a></h5> 
+<h5><a href='http://padf.applicantstack.com/x/detail/a21hsk8nwbtz'>Communications Intern ? STEM Education - Pan American ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Reports to Communications Manager. Education Required. Must have completed 
 at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
@@ -247,7 +247,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -265,7 +265,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 people select which degree, program, and school is right for them. At Noodle, 
 every?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oxBDafwF'>TeamViewer Global Careers - Intern (m/f/d) E-Mail-Marketing</a></h5> 
+<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oxBDafwF'>TeamViewer Global Careers - Intern (m/f/d) E-Mail-Marketing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -296,7 +296,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -446,7 +446,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/taylorcorp/job/oQqCafwM'>Taylor Corporation Careers - Production Leadership Intern (all shifts)-1</a></h5> 
+<h5><a href='https://jobs.jobvite.com/taylorcorp/job/oQqCafwM'>Taylor Corporation Careers - Production Leadership Intern (all shifts)-1</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
