--- a/data-science.html
+++ b/data-science.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://luisaviaroma.applytojob.com/apply/B0Ct0JRC1h/DATA-SCIENTIST'>DATA SCIENTIST - Luisa Via Roma spa - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://luisaviaroma.applytojob.com/apply/B0Ct0JRC1h/DATA-SCIENTIST'>DATA SCIENTIST - Luisa Via Roma spa - Career Page</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -100,7 +100,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -144,7 +144,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://10clouds.workable.com/j/F99CCAB812'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
+<h5><a href='https://10clouds.workable.com/j/F99CCAB812'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
@@ -236,7 +236,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 Scientist to join our growing Basketball Operations team. In this role, you will 
 have?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/256056-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/256056-data-science-praktikum-w-m-d'>Job @ Westphalia DataLab  (M?nster): Data Science ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -257,7 +257,7 @@ have?...</p>
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1680164'>Job Application for Senior Data Scientist at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1680164'>Job Application for Senior Data Scientist at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View San Francisco Vancouver Toronto Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -332,11 +332,11 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/splunk-data-scientist-90830'>Splunk Data Scientist - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/splunk-data-scientist-90830'>Splunk Data Scientist - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Job Summary: The Splunk Data Analytics and Business Intelligence Data 
 Scientist ? Assistant Director drives forward the Business Value Creation...</p>
@@ -359,7 +359,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
-<h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisistextline.workable.com/j/E04B7C7AEE?viewed=true'>Data Scientist, Behavioral Science Specialist ... - Crisis Text Line - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Crisis Text Line is looking for a Data Scientist with experience in Behavioral 
 Science (?Behavioral Data Scientist?) to support our three core operational?...</p>
@@ -428,7 +428,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -469,11 +469,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Moscow</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692100356-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692100356-junior-data-scientist'>DataProphet Junior Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
