Forescout Technologies Inc. Careers - React Frontend Developer. NICE Careers - Senior Front End Engineer. Front-end Web Developer - RubensteinTech - Career Page. FRONT-END DEVELOPER - Luisa Via Roma spa - Career Page. Ungerboeck Software International Careers - Front End Web Developer. Wirecard Asia - Jobs: Front-End UI Developer, Banking Solutions - Apply online. Job @ brandung & Co. KG (Köln): Frontend Entwickle... | JOIN. Front End Engineer | Noodle.com - The Noodle Companies - Career Page. Job @ brandung & Co. KG (Köln): Senior Frontend En... | JOIN. Job Application for Frontend Developer at Algorythma. Xenzone - Jobs: Front-end Developer, London, JavaScript, HTML, CSS - Apply online. Job @ Healthmetrix (Berlin): Senior Web Frontend S... | JOIN. Wirex - Jobs: Front End Team Lead - Apply online. Newfront Insurance - Backend Engineer. Job @ Verity Studios (Zürich): QT/QML Front End So... | JOIN. Job Application for Développeur(euse) front-end - Knowledge Scout | Front-End Software Developer - Knowledge Scout at Element AI.       Frontend Engineer (m/f/x) - UP42 GmbH     . Radley Yeldar - Jobs: Freelance Front End Developer - Apply online. Job Application for Software Engineer - Frontend at LiveRamp. HomeX - Frontend Developer. Futrli - Jobs: Lead Frontend Engineer - Apply online. Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online. Futrli - Jobs: Front End Engineer - Apply online. Futrli - Jobs: Front End Engineer (Belfast) - Apply online. Job Application for Sr. Front-End Engineer (React/Javascript) at Cast & Crew Entertainment Services, LLC. Job @ CAYA (Berlin): (REACT NATIVE) FRONT-END DEVE... | JOIN.       Software-Entwickler, Schwerpunkt Webfrontends mit Javascript (w/m/d) - INVERS     . Job @ avency (Telgte): Frontend Developer (m/w/d) | JOIN. QualiTest - Jobs: R&D Frontend Team Leader - Apply online. QualiTest - Jobs: R&D Frontend Developer - Apply online. Kickstarter - Front End Engineer, Project Storytelling. Job @ GOWAGO (Zürich): Senior Front

--- a/frontend.html
+++ b/frontend.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXJ9Vfwu&k=Job&j=o9eS9fw8&__jvst=Employee&__jvsd=sdf6Wiwh&__jvsc=Twitter&bid=nrSxWLw2'>Forescout Technologies Inc. Careers - React Frontend Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/nice-systems-old/job/ogJEafwx'>NICE Careers - Senior Front End Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://rubensteintech.applytojob.com/apply/NJzCxDWQ0t/Frontend-Web-Developer'>Front-end Web Developer - RubensteinTech - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rubensteintech.applytojob.com/apply/NJzCxDWQ0t/Frontend-Web-Developer'>Front-end Web Developer - RubensteinTech - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -62,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://noodle.applytojob.com/apply/G4ITVroXww/Front-End-Engineer-Noodlecom'>Front End Engineer | Noodle.com - The Noodle Companies - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://noodle.applytojob.com/apply/G4ITVroXww/Front-End-Engineer-Noodlecom'>Front End Engineer | Noodle.com - The Noodle Companies - Career Page</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -120,7 +124,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/58436A7D2D'>Futrli - Jobs: Lead Frontend Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://invers.recruitee.com/o/softwareentwickler-schwerpunkt-webfrontends-mit-javascript-wmd'>
       Software-Entwickler, Schwerpunkt Webfrontends mit Javascript (w/m/d) - INVERS
     </a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
@@ -158,7 +162,7 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kickstarter/c0716afb-21a8-467e-822d-dcf189f1c85f'>Kickstarter - Front End Engineer, Project Storytelling</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kickstarter/c0716afb-21a8-467e-822d-dcf189f1c85f'>Kickstarter - Front End Engineer, Project Storytelling</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -196,7 +200,7 @@ design with the art of programming. You will be working on game-changing?...</p>
 <p>vor 4 Tagen ... Das hatchery Team sucht zum n?chstm?glichen Zeitpunkt einen... Praktikant 
 Frontend Developer (m/w/x). JavaScript, HTML und CSS sind Dein Revier?</p>
 <hr/>
-<h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zl.workable.com/j/637F7BEB08'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of JR Front-end Developer at Docplanner / Doctoralia.</p>
 <hr/>
@@ -218,7 +222,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Frontend Developer at Drover.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pulselive.workable.com/jobs/1064569'>Pulselive - Jobs: Front-end Developer - CONTRACT - Apply online</a></h5> 
+<h5><a href='https://pulselive.workable.com/jobs/1064569'>Pulselive - Jobs: Front-end Developer - CONTRACT - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Front-end Developer - CONTRACT at Pulselive.</p>
 <hr/>
@@ -335,7 +339,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4370690002'>Job Application for Frontend Engineer - Discovery at Twitch</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -353,7 +357,7 @@ built as a Single Page App using Angular (2+) and React application. We are?...<
 technologies, allowing our teams to train the ML models, and allowing analysts to 
 make?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
+<h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
@@ -384,7 +388,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Lead Frontend Engineer at Futrli.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/iflix/job/oDVDafw5'>iflix Careers - Senior Frontend Engineer - React</a></h5> 
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -412,7 +416,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765502'>Job Application for Senior Front-End Engineer at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -424,13 +428,13 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
     Senior Software Engineer - Frontend at Bizongo
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
+<h5><a href='https://boards.greenhouse.io/patientslikeme/jobs/1783776?gh_jid=1783776'>Job Application for Principal Front-End Engineer at PatientsLikeMe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -459,10 +463,6 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/rhwhotels/job/oeMDafwx'>RHW Hotel Management Careers - Front Desk Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/oifDafw4'>New Relic Careers - Senior Front-End Engineer</a></h5> 
-<p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
